# job-portal

./: pyproject.toml
project/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
project/apps/jobs/: apps.py
project/apps/users/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
project/apps/users/dtos/: auth_response.py  verification_response.py
project/apps/users/services/: email.py  email_verification.py  logout.py  registration.py  tokens.py
project/config/: settings.py  urls.py
